fixed navigation jump

--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,6 @@ footer {
   text-align: right;
   text-decoration: none;
   padding-right: 1em;
-  padding-top: 1.75em;
 }
   
   .name {
